[package]
name = "rslc"
version = "0.1.0"
authors = ["Aggrathon <antonbjo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rslc"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.11.0"
ndarray = "0.13"
num-traits = "0.2"
paste = "1.0"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]
