[package]
name = "rslc"
version = "0.2.0"
authors = ["Aggrathon <antonbjo@gmail.com>"]
edition = "2018"

[lib]
name = "rslc"
crate-type = ["cdylib"]

[features]
# The python interface is optional
python = ["numpy", "pyo3", "paste"]
# The R interface is optional
r = ["extendr-api", "paste"]

[dependencies]
ndarray = "0.13"
num-traits = "0.2"
numpy = {version = "0.11.0", optional = true }
pyo3 = {version = "0.11.1", optional = true, features = ["extension-module"] }
paste = { version = "1.0", optional = true }
extendr-api = {version = "0.1.2", optional = true }
